Backport J21 virtual thread usage to J17 compatible version